reports/capitulo1.log
Traceback (most recent call last):
  File "d:\programas\anaconda\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "d:\programas\anaconda\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "d:\programas\anaconda\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "d:\programas\anaconda\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "d:\programas\anaconda\lib\asyncio\base_events.py", line 583, in run_until_complete
    return future.result()
  File "d:\programas\anaconda\lib\site-packages\nbclient\client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "d:\programas\anaconda\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "d:\programas\anaconda\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
A continuación se define la función objetivo
------------------

[1;36m  File [1;32m"<ipython-input-28-e282fa37acce>"[1;36m, line [1;32m1[0m
[1;33m    A continuación se define la función objetivo[0m
[1;37m                 ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-28-e282fa37acce>, line 1)

